--- a/css/style.css
+++ b/css/style.css
@@ -1604,6 +1604,14 @@ a:focus {
     color: transparent !important;
 }
 
+.thanks {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .thanks__body {
     margin: 0;
     color: #fff;
